# drawio-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.github/: RELEASE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  publish.yml  release.yml
src/drawio_mcp/: __init__.py  layout.py  layout_engine.py  models.py  server.py  styles.py  validation.py
tests/: test_layout.py  test_layout_engine.py  test_models.py  test_server.py  test_styles.py  test_validation.py
