[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drawio-mcp"
version = "1.0.0"
description = "MCP server for creating draw.io diagrams as XML files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
drawio-mcp = "drawio_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yohasacura/drawio-mcp"
Repository = "https://github.com/yohasacura/drawio-mcp"
Issues = "https://github.com/yohasacura/drawio-mcp/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
