[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drawio-mcp"
version = "1.0.0"
description = "MCP server for creating draw.io diagrams as XML files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "yohasacura", email = "yohasacura@users.noreply.github.com" },
]
keywords = ["mcp", "drawio", "diagrams", "model-context-protocol", "draw-io", "mcp-server"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
drawio-mcp = "drawio_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yohasacura/drawio-mcp"
Repository = "https://github.com/yohasacura/drawio-mcp"
Issues = "https://github.com/yohasacura/drawio-mcp/issues"
Changelog = "https://github.com/yohasacura/drawio-mcp/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
